[package]
name = "catool"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
duct = "0.13"
ron = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.12"
time = "0.3"
tracing = { version = "0.1", features = ["max_level_trace"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
x509-parser = "0.16"
